--- a/app.json
+++ b/app.json
@@ -8,9 +8,9 @@
     "source",
     "Rename"
   ],
-  "success_url": "https://github.com/spechide/AnyDLbot",
-  "website": "https://githib.com/prgofficial",
-  "repository": "https://github.com/prgofficial/RenameBot-PermTB",
+  "success_url": "https://github.com/NaveenTn49/RenameBot-PermTB",
+  "website": "https://github.com/NaveenTn49/RenameBot-PermTB",
+  "repository": "https://github.com/NaveenTn49/RenameBot-PermTB",
   "env": {
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
